# dynamic_clustering_fl_health_conditions

./: .gitignore  README.md  main.py  pyproject.toml  zensical.toml
clustered_fl/: server_app.py
docs/: api-reference.md  architecture.md  configuration.md  extending.md  index.md
dynamic_clustering_fl/: __init__.py  client_app.py  clustering.py  drift.py  factory.py  server_app.py  task.py  visualization.py
dynamic_clustering_fl/domain/: __init__.py  aggregation.py  dataset.py  model.py
dynamic_clustering_fl/infrastructure/: __init__.py  clustering.py  datasets.py  models.py
scripts/: run_all_configs.py
