[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "clustered-fl-sklearn"
version = "1.0.0"
description = "Clustered Federated Learning with scikit-learn and Flower"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.25.0",
    "flwr-datasets>=0.5.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "joblib>=1.3.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "dynamic_clustering_fl.server_app:app"
clientapp = "dynamic_clustering_fl.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 10
n-clusters = 3

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 5
