[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "dynamic-clustering-fl"
version = "1.0.0"
description = "Clustered Federated Learning - Dataset and Model Agnostic"
license = "Apache-2.0"
dependencies = [
    "flwr[simulation]>=1.25.0",
    "flwr-datasets>=0.5.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "joblib>=1.3.0",
    "mlflow>=2.10.0",
    "pillow>=10.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "flwrlabs"

[tool.flwr.app.components]
serverapp = "dynamic_clustering_fl.server_app:app"
clientapp = "dynamic_clustering_fl.client_app:app"

# Default configuration - can be overridden via CLI
# Usage: flwr run . --run-config "dataset='mnist' model='mlp' num-server-rounds=10"
[tool.flwr.app.config]
# Core FL settings
num-server-rounds = 15
local-epochs = 5
num-partitions = 10

# Dataset and model selection
# Available datasets: cifar10, mnist, fashion-mnist, cifar100
# Available models: mlp, logistic
dataset = "cifar10"
model = "mlp"

# Model hyperparameters
hidden-layers = "128,64"
learning-rate = 0.01

# Clustering settings
n-client-clusters = 3
clustering-interval = 3

# MLflow configuration
mlflow-experiment-name = "dynamic-clustering-fl"
mlflow-run-name = "clustered-fedavg"

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10
